Avoid invisible text during font loading

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,6 +11,7 @@
 @font-face {
   font-family: "IBMPlexSerif-Regular";
   src: url("/assets/fonts/IBMPlexSerif-Regular.ttf") format("truetype");
+  font-display: swap;
 }
 html,
 body {
